milestone: Fix broken layout on mobile view
See: Yona Github issue #440

--- a/app/assets/stylesheets/less/_page.less
+++ b/app/assets/stylesheets/less/_page.less
@@ -2290,7 +2290,7 @@ label.inline-list {
 
     .milestone {
         padding: 15px 0px; /* 15px 30px;*/
-        overflow: hidden;
+      
         &:last-of-type { border-bottom:none; }
 
         .bar{
